Using api spec 0.1.2
